# mysql-mgr-ha-experiment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  innodb_cluster.md  mgr.md  vm.md  主从复制模式.md
ansible-deploy/: .gitignore  ansible.cfg  env.sh  pyproject.toml
ansible-deploy/inventory/default/: inventory.yml
ansible-deploy/roles/mysql_mgr_node/handlers/: main.yml
ansible-deploy/roles/mysql_mgr_node/tasks/: config.yml  initialize.yml  install.debian.yml  install.redhat.yml  main.yml
ansible-deploy/roles/mysql_mgr_node/templates/: my.cnf.j2
ansible-deploy/roles/mysql_mgr_node/vars/: main.yml
cloudinit/: README.md  hello.ud  single.yaml
conf/: db1.cnf  db2.cnf  db3.cnf  router.conf
innodb_cluster/: README.md
ssl/: ca-key.pem  ca.pem  server-cert.pem  server-key.pem
