[project]
name = "mysql-mgr-ansible"
version = "0.1.0"
description = "mysql 8.0 ansible 自动化安装与运维工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.5.0",
    "boto3>=1.38.14",
    "jmespath>=1.0.1",
    "mitogen>=0.3.23",
    "requests>=2.32.3",
]

# Python 换源
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
package = true

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["filter_plugins/*"]
